# pg_stat_advisor

./: Makefile  README.md  meson.build  pg_stat_advisor.c  pg_stat_advisor.conf  pg_statistics_advisor.c
expected/: pg_stat_advisor.out
include/: cmd_dispatcher.h  pg_stat_advisor_bgw.h  ringbuffer.h
sql/: pg_stat_advisor.sql
src/: cmd_dispatcher.c  pg_stat_advisor.c  pg_stat_advisor_bgw.c  ringbuffer.c
